# chip8-emulator

./: .gitignore  Cargo.toml  README.md
chip8_core/: Cargo.toml
chip8_core/src/: lib.rs  opcodes.rs
chip8_desktop/: Cargo.toml
chip8_desktop/src/: main.rs
chip8_ui/: Cargo.toml
chip8_ui/src/: main.rs
src/: main.rs
src/core/: audio.rs  lib.rs  opcodes.rs
src/emulator-core/: lib.rs  opcodes.rs
